--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,7 +4,7 @@ on:
   push:
     path: 
       - "newfornt/*"
-      - ".aws/taskdef/*"
+      - ".aws/*"
 
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
