--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,14 +7,12 @@ on:
       - ".aws/*"
 
 env:
-  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: techmart-ecr-eastjava-danang           # set this to your Amazon ECR repository name
-  ECS_SERVICE: techmart-service-eastjava-danang                # set this to your Amazon ECS service name
-  ECS_CLUSTER: techmart-cluster-eastjava-danang                # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/taskdef.json # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: techmart-container          # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: techmart-ecr-eastjava-danang
+  ECS_SERVICE: techmart-service-eastjava-danang
+  ECS_CLUSTER: techmart-cluster-eastjava-danang
+  ECS_TASK_DEFINITION: .aws/taskdef.json
+  CONTAINER_NAME: techmart-container
 
 permissions:
   contents: read
